Bison/YYdoc/yydoc.output
Grammatik

    0 $accept: grammar $end

    1 grammar: rule_list

    2 rule_list: rule
    3          | rule rule_list

    4 rule: NONTERMINAL ':' body_list ';'

    5 body_list: body
    6          | body '|' body_list

    7 body: item body
    8     | /* leer */

    9 item: TOKEN
   10     | NONTERMINAL
   11     | CHAR
   12     | STRING


Terminale und die Regeln, in denen sie verwendet werden

$end (0) 0
':' (58) 4
';' (59) 4
'|' (124) 6
error (256)
TOKEN (258) 9
NONTERMINAL (259) 4 10
CHAR (260) 11
STRING (261) 12


Nicht-Terminal und die Regeln, in denen sie verwendet werden

$accept (10)
    auf der linken Seite: 0
grammar (11)
    auf der linken Seite: 1, auf der rechten Seite: 0
rule_list (12)
    auf der linken Seite: 2 3, auf der rechten Seite: 1 3
rule (13)
    auf der linken Seite: 4, auf der rechten Seite: 2 3
body_list (14)
    auf der linken Seite: 5 6, auf der rechten Seite: 4 6
body (15)
    auf der linken Seite: 7 8, auf der rechten Seite: 5 6 7
item (16)
    auf der linken Seite: 9 10 11 12, auf der rechten Seite: 7


Zustand 0

    0 $accept: . grammar $end

    NONTERMINAL  schiebe und gehe zu Zustand 1 über

    grammar    gehe zu Zustand 2 über
    rule_list  gehe zu Zustand 3 über
    rule       gehe zu Zustand 4 über


Zustand 1

    4 rule: NONTERMINAL . ':' body_list ';'

    ':'  schiebe und gehe zu Zustand 5 über


Zustand 2

    0 $accept: grammar . $end

    $end  schiebe und gehe zu Zustand 6 über


Zustand 3

    1 grammar: rule_list .

    $default  reduziere mit Regel 1 (grammar)


Zustand 4

    2 rule_list: rule .
    3          | rule . rule_list

    NONTERMINAL  schiebe und gehe zu Zustand 1 über

    $default  reduziere mit Regel 2 (rule_list)

    rule_list  gehe zu Zustand 7 über
    rule       gehe zu Zustand 4 über


Zustand 5

    4 rule: NONTERMINAL ':' . body_list ';'

    TOKEN        schiebe und gehe zu Zustand 8 über
    NONTERMINAL  schiebe und gehe zu Zustand 9 über
    CHAR         schiebe und gehe zu Zustand 10 über
    STRING       schiebe und gehe zu Zustand 11 über

    $default  reduziere mit Regel 8 (body)

    body_list  gehe zu Zustand 12 über
    body       gehe zu Zustand 13 über
    item       gehe zu Zustand 14 über


Zustand 6

    0 $accept: grammar $end .

    $default  annehmen


Zustand 7

    3 rule_list: rule rule_list .

    $default  reduziere mit Regel 3 (rule_list)


Zustand 8

    9 item: TOKEN .

    $default  reduziere mit Regel 9 (item)


Zustand 9

   10 item: NONTERMINAL .

    $default  reduziere mit Regel 10 (item)


Zustand 10

   11 item: CHAR .

    $default  reduziere mit Regel 11 (item)


Zustand 11

   12 item: STRING .

    $default  reduziere mit Regel 12 (item)


Zustand 12

    4 rule: NONTERMINAL ':' body_list . ';'

    ';'  schiebe und gehe zu Zustand 15 über


Zustand 13

    5 body_list: body .
    6          | body . '|' body_list

    '|'  schiebe und gehe zu Zustand 16 über

    $default  reduziere mit Regel 5 (body_list)


Zustand 14

    7 body: item . body

    TOKEN        schiebe und gehe zu Zustand 8 über
    NONTERMINAL  schiebe und gehe zu Zustand 9 über
    CHAR         schiebe und gehe zu Zustand 10 über
    STRING       schiebe und gehe zu Zustand 11 über

    $default  reduziere mit Regel 8 (body)

    body  gehe zu Zustand 17 über
    item  gehe zu Zustand 14 über


Zustand 15

    4 rule: NONTERMINAL ':' body_list ';' .

    $default  reduziere mit Regel 4 (rule)


Zustand 16

    6 body_list: body '|' . body_list

    TOKEN        schiebe und gehe zu Zustand 8 über
    NONTERMINAL  schiebe und gehe zu Zustand 9 über
    CHAR         schiebe und gehe zu Zustand 10 über
    STRING       schiebe und gehe zu Zustand 11 über

    $default  reduziere mit Regel 8 (body)

    body_list  gehe zu Zustand 18 über
    body       gehe zu Zustand 13 über
    item       gehe zu Zustand 14 über


Zustand 17

    7 body: item body .

    $default  reduziere mit Regel 7 (body)


Zustand 18

    6 body_list: body '|' body_list .

    $default  reduziere mit Regel 6 (body_list)
